10-Auth/httproute-test_app-secure.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: test-app-httproute-secure
 annotations:
   konghq.com/plugins: kong-oidc-introspection
spec:
 parentRefs:
 - name: kong
   sectionName: proxy
 hostnames:
 - www.example.com
 rules:
 - matches:
   - path:
       type: PathPrefix
       value: /secure
   backendRefs:
   - name: test-app
     kind: Service
     port: 4000
