10-Auth/httproute-test_app.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: test-app-httproute
spec:
 parentRefs:
 - name: kong
   sectionName: proxy
 hostnames:
 - www.example.com
 rules:
 - matches:
   - path:
       type: PathPrefix
       value: /notsecure
   - path:
       type: Exact
       value: /
   backendRefs:
   - name: test-app
     kind: Service
     port: 4000
